--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -256,17 +256,27 @@ As field names specific to a sample are made by appending with -samplename, some
 count($sequenced-*, == "v")
 will give the number of samples for which a variant was found
 
-==== Sample aggregates ====
-Sometimes you want summary info for each (selected) variation over the samples in the file 
-(e.g. in how many samples is the variant present, in which samples, ..). 
-You can do this in a limited way using the previous count functions using an asterix.
-Sample aggregate functions are a much more flexible way to do this. In the arguments 
-of the function, you can use field names without the sample part, which will then be used for each sample,
-e.g. scount($sequenced == "v") will count the number of samples for which sequenced-<sample> is equal to "v".
-Samples that do not have the required field(s) are ignored.
-A special variable named sample is available with the name of the sample, e.g.
-scount($sample match "gatk-*" and $sequenced == "v") will count the number of 
-gatk samples (sample name matches gatk-*) for which sequenced-<sample> is equal to "v"
+==== Sample and analysis aggregates ====
+Sometimes you want summary info for each (selected) variation over the
+samples in the file (e.g. in how many samples is the variant present, in
+which samples, ..). You can do this in a limited way using the previous
+count functions using an asterix, but it is very difficult to combine
+queries (correctly) this way. Sample aggregate functions can be used (much
+easier and more flexible) for this purpose:
+
+A sample aggregate function will loop over all samples in a line, testing
+a condition or aggregating values. In the arguments of the function
+(condition, value), you can use field names without the sample part, which
+will then be used for each sample, e.g. scount($sequenced-gatk-rdsbwa ==
+"v") will count the number of samples for which
+sequenced-gatk-rdsbwa-<sample> is equal to "v". Samples that do not have
+the required field(s) are ignored.
+
+A special variable named sample is available with the name of the sample,
+e.g. scount($sample match "a*" and $sequenced-gatk-rdsbwa == "v") will
+count the number of samples starting with an "a" for which
+sequenced-gatk-rdsbwa-<sample> is equal to "v"
+
 Following sample aggregates are available:
 ; scount(condition): number of samples for which **condition** is true
 ; slist(?condition?,value): returns a (comma separated) list with results of value for each sample for which (if given) **condition** is true
@@ -280,6 +290,11 @@ Following sample aggregates are available:
 ; smedian(?condition?,value): returns the median of results of value for each sample for which (if given) **condition** is true
 ; smode(?condition?,value): returns the mode of results of value for each sample for which (if given) **condition** is true
 ; spercent(condition1,condition2): returns 100.0*(number of samples for which condition1 and condition2 are true)/(number of samples for which condition1 is true)
+
+The same functions starting with an a instead of an s (acount, alist, ...) are
+available for caclculating aggregate functions looping over all analyses, e.g.
+aavg($quality) to calulated the average quality over all analyses in a line.
+The special variable "analysis" will be available within the arguments.
 
 ==== comparing samples ====
 ; compare(samplename1,samplename2, ...): compares the variant in the given samples, and returns one of:
