--- a/lib/cg_project_addsample.wiki
+++ b/lib/cg_project_addsample.wiki
@@ -17,7 +17,7 @@ and adds the given raw data under projectdir/samples/samplename/ori (by
 default using softlinks).
 
 rawdata can either be given as a single
-directory (containing the fastq files, Complete Genomics surce data, etc.
+directory (containing the fastq files, Complete Genomics source data, etc.
 according to the type of experiment) or as one or more files. (see
 [[howto_process_project]] for examples.
 
@@ -31,7 +31,7 @@ one or more raw data files.
 ; -amplicons ampliconfile: This option turns on amplicon sequencing
 analysis (see [[cg_process_sample]]) using the amplicons defained in **ampliconfile**
 ; -targetfile targetfile: if targetfile is provided, coverage statistics will be calculated for this region
-; - tranfer soft/hard/copy: determines how raw data files are "transferred" to the sampledir: soft(link), hard(link) or copy
+; -tranfer soft/hard/copy: determines how raw data files are "transferred" to the sampledir: soft(link), hard(link) or copy
 ; -force 0/1: Normally an error is given if the target file already exists. use -force 1 to overwrite existing sample data
 
 == Category ==
