--- a/lib/cg_process_multicompar.wiki
+++ b/lib/cg_process_multicompar.wiki
@@ -40,8 +40,14 @@ the subtasks thus, that the number of files open at the same time stays
 below this number. With this option, the maximum number of open files can
 be set manually (if the program e.g. does not deduce the proper limit, or
 you want to affect the distribution).
-; **-varfiles files**: With this option you can limit the varfiles to be added to the given one.
-They should be given as a list of files in this option, so if using wildcards, enclose in quotes.
+; **-varfiles files**: With this option you can limit the variant files to be added.
+(default is to use all found in the project dir).
+They should be given as a list of files in this option, so enclose in
+quotes. You can still use * as a wildcard, as cg will resolve the wildcards itself.
+; **-svfiles files**: With this option you can limit the structural variant files to be added
+(default is to use all found in the project dir).
+They should be given as a list of files in this option, so enclose in
+quotes. You can still use * as a wildcard, as cg will resolve the wildcards itself.
 
 This command can be distributed on a cluster or using multiple with [[joboptions|job options]] (more info with cg help joboptions)
 
