--- a/lib/cg_process_multicompar.wiki
+++ b/lib/cg_process_multicompar.wiki
@@ -48,6 +48,9 @@ quotes. You can still use * as a wildcard, as cg will resolve the wildcards itse
 (default is to use all found in the project dir).
 They should be given as a list of files in this option, so enclose in
 quotes. You can still use * as a wildcard, as cg will resolve the wildcards itself.
+; -keepfields fieldlist: Besides the obligatory fields, include only the fields
+in fieldlist (space separated) in the output multicompar. Default is to use all fields
+present in the file (*)
 
 This command can be distributed on a cluster or using multiple with [[joboptions|job options]] (more info with cg help joboptions)
 
