--- a/lib/cg_vcf2tsv.wiki
+++ b/lib/cg_vcf2tsv.wiki
@@ -72,8 +72,11 @@ You can use the -typelist option to specify what to do with them.
 
 == Options ==
 ; -split 0/1/ori: produce a [[tsv]] with split (1), multiallelic (0) alleles or keep the original layout
-; -sort 0/1: 1 (default) to produce a properly sorted tsv file. Can be set to 0 to save
-processing time if the result is sorted downstream anyway
+; -sort 0/1: By default (1) cg vcf2tsv will sort the file during conversion. 
+Explicit sorting is not always needed (e.g. if the vcf is sorted and uses 
+a natural sort order for chromsomes, or if sorting will happen later in
+the workflow anyway) and can be turned of using -sort 0 to save
+processing time.
 ; -t typelist (-typelist): Determines what to do with fields indicated with Number=. in the vcf.
 The first character indicates how to deal by default with such a field (R,
 A, to distribute over alleles or . to just copy the list). Following this
