--- a/docs/format_project.wiki
+++ b/docs/format_project.wiki
@@ -64,33 +64,34 @@ type (depending on source data):
 ; map-rdsbwa-sample1.bam: bam file created by aligning the reads of sample1
 to the reference genome in dbdir using bwa. The bam file has been sorted
 (s), duplicate marked (d), and realigned (r).
-; var-gatk-rdsbwa-sample1.tsv: a [[format_tsv|tsv]] variant file that contains
+; var-gatk-rdsbwa-sample1.tsv.lz4: a (compressed) [[format_tsv|tsv]] variant file that contains
 variants called by gatk based on map-rdsbwa-sample1.bam. 
-; sreg-gatk-rdsbwa-sample1.tsv: A region file with all regions that can be
+; sreg-gatk-rdsbwa-sample1.tsv.lz4: A region file with all regions that can be
 considered sequenced using the same methods and quality measures as
-var-gatk-rdsbwa-sample1.tsv. Any position in those regions that is not in
+var-gatk-rdsbwa-sample1.tsv.lz4. Any position in those regions that is not in
 the variant file can be called reference with the same reliability as the
 variant calls.
-; varall-gatk-rdsbwa-sample1.tsv: variant file containing variant calls by gatk for all
+; varall-gatk-rdsbwa-sample1.tsv.lz4: variant file containing variant calls by gatk for all
 positions with >= 5 coverage (also reference called positions). This file
 is used to create the sreg files, and to update data in making multicompar 
 files later.
-; reg_cluster-gatk-rdsbwa-S0489.tsv: regions with many clustered variants (which are less reliable)
+; reg_cluster-gatk-rdsbwa-S0489.tsv.lz4: regions with many clustered variants (which are less reliable)
 ; bcolall: directory containing whole genome coverage, refscore, ... data in the form of [[bcol]] files.
 These files can be used to create the sreg files, and to update data in making multicompar 
 files later. (In older project dirs, this directory may be called
 coverage-cg-* and contain old style formatted bcol files)
-; cgsv-sample.tsv: structural variants
-; cgcnv-sample.tsv: CNV data
+; sv-manta-rdsbwa-sample.tsv.lz4: structural variant calls by manta
+; cgsv-sample.tsv.lz4: Complete Genomics structural variants
+; cgcnv-sample.tsv.lz4: Complete Genomics CNV data
 
 The result files from samtools variant calling on the same bamfile
-(map-rdsbwa-sample1.bam), are named var-sam-rdsbwa-sample1.tsv,
-sreg-sam-rdsbwa-sample1.tsv, varall-sam-rdsbwa-sample1.tsv,
-reg_cluster-sam-rdsbwa-S0489.tsv
+(map-rdsbwa-sample1.bam), are named var-sam-rdsbwa-sample1.tsv.lz4,
+sreg-sam-rdsbwa-sample1.tsv.lz4, varall-sam-rdsbwa-sample1.tsv.lz4,
+reg_cluster-sam-rdsbwa-S0489.tsv.lz4
 
 For Complete Genomics alignment and variant calling the files
-are named var-cg-cg-sample1.tsv,
-sreg-cg-cg-sample1.tsv, reg_cluster-cg-cg-S0489.tsv
+are named var-cg-cg-sample1.tsv.lz4,
+sreg-cg-cg-sample1.tsv.lz4, reg_cluster-cg-cg-S0489.tsv.lz4
 
 The sampledir may contain precalculated data data from other pipelines.
 If these are in the correct format, they will be integrated in the
@@ -100,14 +101,31 @@ variants included in the multicompar.
 == compar dir ==
 The subdirectory compar contains comparisons of all samples, e.g.:
 
-; annot_compar-projectname.tsv: multicompar file containing information for
+; annot_compar-projectname.tsv.lz4: multicompar file containing information for
 all variants in all samples (and all methods). If a variant is not present
 in one of the samples, the information at the position of the variant will
 be completed (is the position sequenced or not, coverage, ...) The file is
 also annotated with all databases in dbdir (impact on genes, regions of
 interest, known variant data)
-; sreg-projectname.tsv: sequenced region multicompar file containing for all
+; sreg-projectname.tsv.lz4: sequenced region multicompar file containing for all
 regions whether they are sequenced (1) or nor (0) for each sample.
+; annot_sv-projectname.tsv.lz4: multicompar structural variant file containing
+information for all structural variants in all samples (and all methods).
+This file is made differently from the small vrariants file: Structural
+variant comparison uses approximate matching: Inversion and deletions are
+matched if they overlap at least 75%, and the begin and end positions
+differ less than 300 bases. For insertions and translocation, a difference
+of 30 bases in position is allowed (by default).
+Also, for structural variants information will not be completed (is the
+position sequenced or not, coverage, ...) for samples without a variant
+call. The file is also annotated with all databases in dbdir (impact on
+genes, regions of interest, known variant data)
+
+== analysisinfo files ==
+Most files have an accompanying analysisinfo file (same name as the file,
+but with the extension .analysisinfo added). These are tsv files containing
+information about how the file was made (which programs were used, which
+versions, settings, ...)
 
 == projectinfo.tsv ==
 projectinfo.tsv is a [[tsv]] file containing data about the project.
