--- a/lib/cg_pmulticompar.wiki
+++ b/lib/cg_pmulticompar.wiki
@@ -103,4 +103,4 @@ reuse the temp files already used instead of recreating them.
 This command can be distributed on a cluster or using multiple with [[joboptions|job options]] (more info with cg help joboptions)
 
 == Category ==
-Compare
+Variants
