--- a/lib/cg_svmulticompar.wiki
+++ b/lib/cg_svmulticompar.wiki
@@ -28,4 +28,4 @@ More than one svfile can added in one command
 ; -minoverlap number: minimum percent overlap needed to identify deletions or inversions as the same (default 75)
 
 == Category ==
-Structural variants
+Variants
