--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -25,7 +25,8 @@ indicating compression (e.g. .lz4), the output file will be compressed using the
 All non-sample related fields (those without a -) will be included. The sample nnames may contain wildcards (*)
 ; -ssamples samples: same as -samples, but the order of fields in the file will be changed, so that samples are sorted as in the parameter
 ; -s sortfields: sort on given fields (uses natural sort, so that e.g. 'chr1 chr2 chr10' will be sorted correctly)
-if **sortfields** is "-", the default sort fields will be used (chromosome,begin,end,type,alt).
+If a sort field is prepended with an -, the sort will be reversed for that field.
+If **sortfields** is "-", the default sort fields will be used (chromosome,begin,end,type,alt).
 This will also accept name variations of the fields, such as chrom instead of chromosome.
 ; -sr sortfields: sort on given fields in reverse order
 ; -si sampleinfofile: a file in which extra information about the samples can be found (see further).
