--- a/docs/format_tsv.wiki
+++ b/docs/format_tsv.wiki
@@ -11,6 +11,7 @@ unless by coding them e.g. by using escape characters (\t,\n)
 The first line of the tab file (not starting with a #) is a **header**
 that contains column names (or fields). Genomecomb allows comment lines (indicated by
 starting the line with a # character) containing metadata to precede the header.
+The convention genomecomb uses for storing metadata in the comments is described at the bottom of this help
 
 Depending on the columns present, tsv files can be used for various purposes. Usually 
 the files are used to describe features on a reference genome sequence. In this
@@ -183,3 +184,48 @@ In order to extract the data merged in some of the vcf fields into a genomecomb 
 use [[cg_vcf2tsv|cg vcf2tsv]]
 ; Complete genomics: header line is preceeded by an empty line and starts with a > character
 
+== metadata in comments format ==
+The following conventions are used by genomecomb for storing metadata in
+the comments of a tsv file: The comment character (#) is followed by a
+keyword and a value separated by a tab character, e.g. the first comment
+lines will usually contain the "filetype" keyword and value, followed by
+fileversion and split status:
+{{{
+#filetype	tsv/varfile
+#fileversion	0.99
+#split	1
+}}}
+
+The same keyword (with different valuesd) can be repeated. In this case
+the values can be interpreted as a list.
+If the first value of such a list is "table" the list contains a tab-separated table:
+The next element (after table) contains the header, the following
+tab-separated lines with the data, e.g A typical table is the fields table
+describing the fields present in the tsv file, e.g.:
+{{{
+#fields	table
+#fields	field	number	type	description
+#fields	chromosome	1	String	Chromosome/Contig
+#fields	begin	1	Integer	Begin of feature (0 based - half open)
+#fields	end	1	Integer	End of feature (0 based - half open)
+#fields	type	1	String	Type of feature (snp,del,ins,...)
+#fields	ref	1	String	Reference sequence, can be a number for large features
+#fields	alt	1	String	Alternative sequence, can be a number for large features
+#fields	name	1	String	name of feature
+#fields	quality	1	Float	Quality score of feature
+#fields	filter	1	String	Filter value
+#fields	alleleSeq1	1	String	allele present on first chromosome/haplotype
+#fields	alleleSeq2	1	String	allele present on second chromosome/haplotype
+#fields	sequenced	1	String	sequenced status: v = variant, r = reference (i.e. not this variant), u = unsequenced
+#fields	zyg	1	String	Zygosity status: m = homozygous, t = heterozygous, r = reference, o = other variant, c = compound, i.e. genotype has this variant and other variant
+#fields	phased	1	Integer	Phased status: 0 if not phased, other integer if phased (same as variants in phase)
+#fields	genotypes	H	Integer	Genotypes
+#fields	alleledepth_ref	1	Integer	Allelic depths for the ref allele
+#fields	alleledepth	A	Integer	Allelic depths for the alt alleles in the order listed
+#fields	frequency	A	Float	Allele Frequency
+}}}
+The fields table contains 4 columns: 
+**field** contains the field name,
+**number** is 1 if the column contains a single value, A if it contains lists with a value for alternative allele
+or H if it contains a value for each haplotype/chromosome. 
+**type** indicates the type of value in the column and **description** gives a textual description of the field.
